examples/java/failing/preserve_order_in_commutative_additions/ExpectedCurrently.java
class MyCls {
        int a;
<<<<<<< LEFT
        //! this is b
        int b;
||||||| BASE
=======
        //! this is c
        int c;
        //! this is d
        int d;
        //! this is e
        int e;
>>>>>>> RIGHT
}
